Add deep night clock
Change-Id: I43933363d97c6ce62f7e5431aaa9e56265c6ccb5

--- a/overlay/common/packages/apps/Settings/res/values/strings.xml
+++ b/overlay/common/packages/apps/Settings/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="aosp_security_bulletin_url">https://source.android.com/security/bulletin/2018-06-01</string>
 
     <string name="lockscreen_clock_selection_analog_deadpool">Analog (deadpool)</string>
+    <string name="lockscreen_clock_selection_analog_deepnight">Analog (deep night)</string>
     <string name="lockscreen_clock_selection_analog_du">Analog (du)</string>
 </resources>
